--- a/index.html
+++ b/index.html
@@ -2,41 +2,45 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Weather Journal</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Weather Journal</title>
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="header">
-        <img src="weather1.jpg"  width="100%" height="100px">
+  <img class="bg" src="/background.jpg" alt="background">
+  <div id="app">
+
+    <div class="headline">
+      Weather Journal App
     </div>
-    <div id="app">
-        <div class="holder headline">
-            Weather Journal App
-        </div>
-        <div class="holder zip">
-            <label for="zip">Enter Zipcode here</label>
-            <input type="text" id="zip" placeholder="enter zip code here">
-        </div>
-        <div class="holder feel">
-            <label for="feelings">How are you feeling today?</label>
-            <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="3"
-                cols="50"></textarea>
-            <button id="generate" type="submit"> Generate </button>
-        </div>
-        <div class="holder entry">
-            <div class="title">Most Recent Entry</div>
-            <div id="entryHolder">
-                <div class="results" id="date"></div>
-                <div class="results" id="temp"></div>
-                <div class="results" id="content"></div>
-            </div>
-        </div>
-		<div id="error"></div>
+
+    <div class="card">
+      <div class="holder zip">
+        <label for="zip">Enter Zipcode here</label>
+        <input type="text" id="zip" placeholder="enter zip code here">
+      </div>
+      <div class="holder feel">
+        <label for="feelings">How are you feeling today?</label>
+        <textarea class="myInput" id="feelings" placeholder="Enter your feelings here"></textarea>
+      </div>
+      <button id="generate" type="submit"> Generate </button>
     </div>
-    <script src="app.js" type="text/javascript"></script>
+
+    <div class="holder entry">
+      <div class="title">Most Recent Entry</div>
+      <div id="entryHolder">
+        <div class="results" id="date"></div>
+        <div class="results" id="temp"></div>
+        <div class="results" id="content"></div>
+      </div>
+    </div>
+
+    <div id="error"></div>
+
+  </div>
+  <script src="app.js" type="text/javascript"></script>
 
 </body>
 
