--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img class="bg" src="/background.jpg" alt="background">
+  <img class="bg" src="background.jpg" alt="background">
   <div id="app">
 
     <div class="headline">
